--- a/app/src/main/res/layout/cardview_scroll_with_genre.xml
+++ b/app/src/main/res/layout/cardview_scroll_with_genre.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
         app:cardCornerRadius="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -19,8 +19,7 @@
             android:layout_width="190dp"
             android:layout_height="110dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/bates_motel"
-            android:contentDescription="@string/video_thumbnail" />
+            android:src="@drawable/bates_motel" />
 
     </androidx.cardview.widget.CardView>
 
