--- a/app/src/main/res/layout/show_with_genre_recyclerview_layout.xml
+++ b/app/src/main/res/layout/show_with_genre_recyclerview_layout.xml
@@ -4,7 +4,7 @@
     android:id="@+id/genre_layout"
     android:layout_marginEnd="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="200dp"
     android:orientation="vertical">
 
     <TextView
