--- a/app/src/main/res/layout/show_with_genre_recyclerview_layout.xml
+++ b/app/src/main/res/layout/show_with_genre_recyclerview_layout.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/genre_layout"
-    android:layout_marginEnd="10dp"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:orientation="vertical">
@@ -20,16 +19,14 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cardView_scroll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
