--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@id/sign_up_tabLayout"
         android:visibility="gone"/>-->
 
-    <com.shobhitpuri.custombuttons.GoogleSignInButton
+    <!--<com.shobhitpuri.custombuttons.GoogleSignInButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/sign_up_tabLayout"
@@ -76,7 +76,7 @@
         android:background="@drawable/ic_rectangle_4"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:textSize="20sp"/>
+        android:textSize="20sp"/>-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutUsername"
