Added Genre & Industry Fragments.

--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -67,7 +67,8 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/rounded_corner_button"
             android:text="NEXT"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:id="@+id/next"/>
 
     </androidx.cardview.widget.CardView>
 
