--- a/app/src/main/res/drawable/original_cardview.xml
+++ b/app/src/main/res/drawable/original_cardview.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="3dp" android:color="@color/colorAccent" />
-    <corners android:radius="20dp"/>
+    <corners android:radius="10dp"/>
     <padding android:left="0dp" android:top="0dp"
         android:right="0dp" android:bottom="0dp" />
+    <gradient android:startColor="@color/colorPrimaryLight"
+        android:endColor="@color/colorPrimaryLight"/>
 </shape>
