--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -28,25 +28,30 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:text="Select your genres. The first 3 will be considered as your preferred."
+        android:text="You may select up-to 3 genres as your preferred."
         android:textColor="@android:color/white"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/textView1" />
 
-    <ScrollView
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/textView2"
         android:layout_marginTop="32dp">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/genre_selection_recyclerView" />
+            android:layout_height="wrap_content">
 
-    </ScrollView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:id="@+id/genre_selection_recyclerView" />
 
+        </ScrollView>
+
+    </TableLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -67,7 +72,8 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/rounded_corner_button"
             android:text="NEXT"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:id="@+id/next"/>
 
     </androidx.cardview.widget.CardView>
 
