--- a/app/src/main/res/layout/fragment_industry.xml
+++ b/app/src/main/res/layout/fragment_industry.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="128dp"
         android:layout_marginEnd="32dp"
-        android:text="What is your gender?"
+        android:text="What is preferred industry?"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -28,7 +28,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:text="We will try to provide gender specific recommendations"
+        android:text="We will try to provide language specific recommendations"
         android:textColor="@android:color/white"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -36,7 +36,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/male_cardView"
+        android:id="@+id/bollywood_cardView"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginStart="32dp"
@@ -46,40 +46,34 @@
         app:cardElevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView2">
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:cardBackgroundColor="@color/colorPrimaryLight">
 
         <TextView
             android:id="@+id/male_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_gravity="center_vertical"
             android:layout_marginEnd="16dp"
-            android:gravity="end"
-            android:text="Male"
+            android:layout_marginStart="16dp"
+            android:gravity="center_horizontal"
+            android:text="Bollywood"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <RadioButton
-            android:id="@+id/radio_male"
+            android:id="@+id/radio_bollywood"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="16dp" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/iron_man"
-            android:tintMode="multiply"
-            app:tint="@android:color/darker_gray" />
-
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/female_cardView"
+        android:id="@+id/hollywood_cardView"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_marginStart="32dp"
@@ -89,35 +83,29 @@
         app:cardElevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/male_cardView">
+        app:layout_constraintTop_toBottomOf="@id/bollywood_cardView"
+        app:cardBackgroundColor="@color/colorPrimaryLight">
 
         <TextView
             android:id="@+id/female_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_gravity="center_vertical"
             android:layout_marginEnd="16dp"
-            android:gravity="end"
-            android:text="Female"
+            android:gravity="center_horizontal"
+            android:text="Hollywood"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginStart="16dp"/>
 
         <RadioButton
-            android:id="@+id/radio_female"
+            android:id="@+id/radio_hollywood"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="16dp" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/scarlet_witch"
-            android:tintMode="multiply"
-            app:tint="@android:color/darker_gray" />
 
     </androidx.cardview.widget.CardView>
 
