--- a/app/src/main/res/layout/episodes_recycler_layout.xml
+++ b/app/src/main/res/layout/episodes_recycler_layout.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:background="@color/colorPrimaryLight">
 
