--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -36,53 +36,53 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
+                android:layout_weight="1"
                 android:text="The Big Bang Theory"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_weight="1"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <com.google.android.material.textview.MaterialTextView
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/linearLayout1"
             android:id="@+id/show_description"
-            android:text="Leonard and Sheldon are brilliant physicists, but none of that genius helps them interact with people, especially women. All this begins to change when a free-spirited beauty, Penny, moves in next door. Sheldon is content spending his nights playing Klingon Boggle with their socially dysfunctional friends. However, Leonard sees in Penny a whole new universe of possibilities ... including love."
-            android:textColor="@android:color/white"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="32dp"
-            android:scrollHorizontally="false"
-            android:inputType="textMultiLine" />
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:inputType="textMultiLine"
+            android:scrollHorizontally="false"
+            android:text="Leonard and Sheldon are brilliant physicists, but none of that genius helps them interact with people, especially women. All this begins to change when a free-spirited beauty, Penny, moves in next door. Sheldon is content spending his nights playing Klingon Boggle with their socially dysfunctional friends. However, Leonard sees in Penny a whole new universe of possibilities ... including love."
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout1" />
+
+        <LinearLayout
+            android:id="@+id/likes_watch_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:layout_weight="1"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/show_description"
-            android:id="@+id/likes_watch_layout"
-            android:layout_marginTop="32dp">
+            app:layout_constraintTop_toBottomOf="@id/show_description">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <Button
                     android:id="@+id/like_button"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/unlike"
-                    android:textColor="@android:color/white"
                     android:gravity="center_horizontal"
-                    android:layout_gravity="center_horizontal"/>
+                    android:textColor="@android:color/white" />
 
                 <TextView
                     android:id="@+id/number_of_likes"
@@ -98,18 +98,18 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <Button
                     android:id="@+id/watch_later"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/watch_later_unselected"
-                    android:textColor="@android:color/white"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center_horizontal"/>
+                    android:gravity="center_horizontal"
+                    android:textColor="@android:color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -124,34 +124,34 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/show_rating"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
             android:text="Rating: "
             android:textColor="@android:color/white"
-            android:id="@+id/show_rating"
-            app:layout_constraintTop_toBottomOf="@id/likes_watch_layout"
-            android:layout_marginTop="32dp"
             android:textSize="20sp"
-            android:layout_marginStart="24dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/likes_watch_layout" />
 
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/episode_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/show_rating"
-            android:id="@+id/episode_tab" />
+            app:layout_constraintTop_toBottomOf="@id/show_rating" />
 
         <LinearLayout
+            android:id="@+id/tab_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/episode_tab"
-            android:id="@+id/tab_fragment_container"
-            android:orientation="vertical"/>
+            app:layout_constraintTop_toBottomOf="@id/episode_tab" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
