--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/navigation_home"
         android:name="com.example.moviestreamingnew.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_find"
+            app:destination="@id/navigation_find" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_find"
