--- a/app/src/main/res/layout/activity_list_found_content.xml
+++ b/app/src/main/res/layout/activity_list_found_content.xml
@@ -49,4 +49,18 @@
 
     </ScrollView>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/genre_title"
+        android:text="Sorry!! Your query did not return any results!!"
+        android:textColor="@android:color/white"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:layout_marginTop="32dp"
+        android:visibility="gone"
+        android:id="@+id/not_found_textView"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
