--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -45,7 +45,8 @@
                     android:padding="12dp"
                     android:textColor="@android:color/white"
                     android:textColorHint="@android:color/darker_gray"
-                    android:id="@+id/query_editText"/>
+                    android:id="@+id/query_editText"
+                    android:inputType="text"/>
 
             </LinearLayout>
 
